experimental/parser/testdata/parser/option/cel_literals.proto.stderr.txt
error: invalid digit in decimal integer literal
  --> testdata/parser/option/cel_literals.proto:7:14
   |
 7 | option x = 42i32;
   |              ^ expected `0` to `9`

error: unrecognized prefix for string literal
  --> testdata/parser/option/cel_literals.proto:10:8
  help: delete it
   |
10 | -     r: r"""x""",
10 | +     r: """x""",
   |

error: unrecognized prefix for string literal
  --> testdata/parser/option/cel_literals.proto:11:8
  help: delete it
   |
11 | -     b: br"""x""",
11 | +     b: """x""",
   |

error: unexpected string literal in message expression
  --> testdata/parser/option/cel_literals.proto:12:10
   |
12 |     b: bR'''x''',
   |          ^^^^^^^ expected message field value

error: unrecognized prefix for string literal
  --> testdata/parser/option/cel_literals.proto:15:8
  help: delete it
   |
15 | -     k: r"x",
15 | +     k: "x",
   |

error: unrecognized prefix for string literal
  --> testdata/parser/option/cel_literals.proto:16:8
  help: delete it
   |
16 | -     j: b"",
16 | +     j: "",
   |

error: unrecognized prefix for string literal
  --> testdata/parser/option/cel_literals.proto:18:8
  help: delete it
   |
18 | -     x: r"" b"""""",
18 | +     x: "" b"""""",
   |

error: implicitly-concatenated string has incompatible prefix
  --> testdata/parser/option/cel_literals.proto:18:12
   |
18 |     x: r"" b"""""",
   |        -   ^
   |        |
   |        must match this prefix

encountered 8 errors
